Agregué position: fixed; a la botonera y un z-index para que los otros elementos que puse no se superpongan al scrollear.

--- a/estilos.css
+++ b/estilos.css
@@ -19,6 +19,8 @@
 	display: flex; 
 	align-items: center;
 	justify-content: space-between;
+	position: fixed;
+	z-index: 25;
 }
 
 .ysmlu{
